after shift tweaks

--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -19,8 +19,15 @@ title:  6. The Use of Gameplay Design Patterns "It’s like a project in itself,
         -   [Table of varied GDP use with supporting
             evidence](#table-of-varied-gdp-use-with-supporting-evidence)
     -   [The role of GDPs in the personal appropriation of concepts and
-        processes (500 - Target
-        750)](#the-role-of-gdps-in-the-personal-appropriation-of-concepts-and-processes-500---target-750)
+        processes - ( Target
+        1000)](#the-role-of-gdps-in-the-personal-appropriation-of-concepts-and-processes---target-1000)
+        -   [The role of GDP used in emerging technical processes
+            (900)](#the-role-of-gdp-used-in-emerging-technical-processes-900)
+            -   [Section 1 - general technical
+                proficiency](#section-1---general-technical-proficiency)
+            -   [Section 2 - patching and bug
+                types](#section-2---patching-and-bug-types)
+            -   [Link to next section](#link-to-next-section)
     -   [GDPs used in the process of guided participation (Target
         2500)](#gdps-used-in-the-process-of-guided-participation-target-2500)
         -   [GDPs and their grouping as a collection or menu of
@@ -32,10 +39,8 @@ title:  6. The Use of Gameplay Design Patterns "It’s like a project in itself,
             (800)](#gdps-used-to-scaffold-ideation-and-prioritisation-processes-800)
         -   [GDPs aiding the process of division of labour
             (1400)](#gdps-aiding-the-process-of-division-of-labour-1400)
-        -   [Discussion on division of labour in the video
-            data](#discussion-on-division-of-labour-in-the-video-data)
-        -   [The role of GDP used in emerging technical processes
-            (900)](#the-role-of-gdp-used-in-emerging-technical-processes-900)
+            -   [Discussion on division of labour in the video
+                data](#discussion-on-division-of-labour-in-the-video-data)
     -   [Use of GDPs in the cultural plane / community level of
         activity](#use-of-gdps-in-the-cultural-plane-community-level-of-activity)
         -   [The role of GDPs to facilitate learners to design for
@@ -91,6 +96,10 @@ title:  6. The Use of Gameplay Design Patterns "It’s like a project in itself,
             -](#discussion-on-player-types--)
         -   [Limitations of observations and careful statements of
             potential](#limitations-of-observations-and-careful-statements-of-potential)
+        -   [Emerging use of narratives and graphics which drawing on
+            home funds of knowledge - AVOID OVERLAP AND CHANGE FOCUS TO
+            AGENCY FROM
+            START](#emerging-use-of-narratives-and-graphics-which-drawing-on-home-funds-of-knowledge---avoid-overlap-and-change-focus-to-agency-from-start)
 
 # The Use of Gameplay Design Patterns "It’s like a project in itself, really"
 
@@ -289,7 +298,7 @@ In Papert's research, detailed study of young coders evolving code creations and
 
 
 
-#### The role of GDP used in emerging technical processes (900)
+### The role of GDP used in emerging technical processes (900)
 
 The implementation of GDPs can stimulate participants to adopt or to share technical processes. Technical processes were sometimes introduced in a basic form through scaffolded activities, supporting documentation or evolved from informal interaction between peers. The following observations show the adaptation of introduced processes being modified by the community. Thus inline with Rogoff's understanding of personal appropriation as bi-directional in nature of the appropriation of personal knowledge, emphasising Vygotsky's foundational view of knowledge as being mutually constituted as participants feed their interpretation of knowledge back into the communities of which they are a part.
 
@@ -391,14 +400,9 @@ Given the bi-directional process, aspects of personal appropriation can be infer
 
 <!-- This exploration focuses on the potential of the 3M learning design rather than making claims on the suitability to develop CT via game making which is explored extensively in other research. -->
 
-
-
 <!-- The process of reusing and modify code to create a computer game can surface both abstract and concrete computing concepts present in the concrete application of code that have emerged organically at different stages of the creative process. -->
 
 <!-- The ongoing reflection provoked by the process of privileging social and cultural aspects of the game making activity has yielded more philosophical questions in relation to the learning process which are explored in the following discussion section. -->
-
-
-
 
 
 <!-- Here learner agency is transformative not only of personal dimensions of learning but also the cultural setting, practices and tools available to learners. The process of playtesting other games allowed participants to share their on emerging interpretations of game making concepts like game feel and challenge without being directly taught. Further, the community sense of what is appropriate of fun evolves as mutually and therefore cannot be taught explicitly. -->
