--- a/_posts/thesis_chapters/tocs/2025-1-6-Gdps.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2025-1-6-Gdps.md_toc.md
@@ -7,8 +7,15 @@
         -   [Table of varied GDP use with supporting
             evidence](#table-of-varied-gdp-use-with-supporting-evidence)
     -   [The role of GDPs in the personal appropriation of concepts and
-        processes (500 - Target
-        750)](#the-role-of-gdps-in-the-personal-appropriation-of-concepts-and-processes-500---target-750)
+        processes - ( Target
+        1000)](#the-role-of-gdps-in-the-personal-appropriation-of-concepts-and-processes---target-1000)
+        -   [The role of GDP used in emerging technical processes
+            (900)](#the-role-of-gdp-used-in-emerging-technical-processes-900)
+            -   [Section 1 - general technical
+                proficiency](#section-1---general-technical-proficiency)
+            -   [Section 2 - patching and bug
+                types](#section-2---patching-and-bug-types)
+            -   [Link to next section](#link-to-next-section)
     -   [GDPs used in the process of guided participation (Target
         2500)](#gdps-used-in-the-process-of-guided-participation-target-2500)
         -   [GDPs and their grouping as a collection or menu of
@@ -20,10 +27,8 @@
             (800)](#gdps-used-to-scaffold-ideation-and-prioritisation-processes-800)
         -   [GDPs aiding the process of division of labour
             (1400)](#gdps-aiding-the-process-of-division-of-labour-1400)
-        -   [Discussion on division of labour in the video
-            data](#discussion-on-division-of-labour-in-the-video-data)
-        -   [The role of GDP used in emerging technical processes
-            (900)](#the-role-of-gdp-used-in-emerging-technical-processes-900)
+            -   [Discussion on division of labour in the video
+                data](#discussion-on-division-of-labour-in-the-video-data)
     -   [Use of GDPs in the cultural plane / community level of
         activity](#use-of-gdps-in-the-cultural-plane-community-level-of-activity)
         -   [The role of GDPs to facilitate learners to design for
@@ -79,3 +84,7 @@
             -](#discussion-on-player-types--)
         -   [Limitations of observations and careful statements of
             potential](#limitations-of-observations-and-careful-statements-of-potential)
+        -   [Emerging use of narratives and graphics which drawing on
+            home funds of knowledge - AVOID OVERLAP AND CHANGE FOCUS TO
+            AGENCY FROM
+            START](#emerging-use-of-narratives-and-graphics-which-drawing-on-home-funds-of-knowledge---avoid-overlap-and-change-focus-to-agency-from-start)
