--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -260,7 +260,7 @@ KEEP LINK BUT MOVE LATER
 The previous section began to touch on the personal appropriation of coding skill via the debugging process. -->
 
 
-As outlined in Chapter 2, the focus on skills and knowledge developed by participants is the dominant thread in research on digital coding and game making [@kafai_constructionist_2015-1; @papert_mindstorms:_1980]. The research aims of this study focus on the under explored areas of social and cultural aspects of the coding process of novices and as such the design of this study does not suit full exploration of the personal plane of activity. Despite this, the evolving design process surfaced activities which and allow the exploration of surfacing of computational thinking and other curricular concepts. Given the potential to adapt this learning design to a more formal environment to address needs outlined in the introductory chapter, from P2 onwards I began to augment the learning design to suit curriculum oriented teaching and assessment of computational thinking concepts and skills, a process which resulted in a learning map of curricular concepts included here as Table 6.x .
+As outlined in Chapter 2, the focus on skills and knowledge developed by participants is the dominant thread in research on digital coding and game making [@kafai_constructionist_2015-1; @papert_mindstorms:_1980]. The research aims of this study focus on the under explored areas of social and cultural aspects of the coding process of novices and as such the design of this study does not suit full exploration of the personal plane of activity. In this informal learning context, participants did not request exploration of concepts aligned with computing curriculum, instead driven more by practical desire to make a game using the tools provided. Despite this, the evolving design process surfaced activities which and allow the exploration of surfacing of computational thinking and other curricular concepts. Given the potential to adapt this learning design to a more formal environment to address needs outlined in the introductory chapter, from P2 onwards I began to augment the learning design to suit curriculum oriented teaching and assessment of computational thinking concepts and skills, a process which resulted in a learning map of curricular concepts included here as Table 6.x .
 
 |      Coding Concepts    | Systems Patterns    | Design Practices|
 |--------------|-----------|------------|
@@ -277,67 +277,61 @@ Table 6.x. Learning Dimensions of the 3M Game Making Model
 
 <!-- NOTE - this map focuses on more concrete concepts,  -->
 
-Appendix.learningmap explores in more detail the evolution of this map, which acknowledges significant tensions in integration of concepts into a informal context, and draws on the process and rationale of Bevan and Petrich's  [-@bevan_learning_2015; -@petrich_it_2013] work to bring a similar learning map to a seemingly chaotic tinkering and making process in museum contexts. Papert's research on Microworlds saw one of the roles learning designers to shape the affordances of playful learning environments to steer learners to explore scientific concepts, mathematical concepts, for example geometry in Turtle computing.
+Appendix.learningmap explores in more detail the evolution of this map, which acknowledges significant tensions in integration of concepts into a informal context, and draws on the process and rationale of Bevan and Petrich's  [-@bevan_learning_2015; -@petrich_it_2013] work to bring a similar learning map to a seemingly chaotic tinkering and making process in museum contexts. Papert's research on Microworlds saw one of the roles learning designers to shape the affordances of playful learning environments to steer learners to explore scientific concepts, mathematical concepts, for example geometry in Turtle computing. Similarly, the design of this research's template can be seen as a half-baked Microworld, with key conceptual affordances represented in the learning map above.
 
-Similarly, the design of this research's template can be seen as a half-baked Microworld, with key conceptual affordances represented in the learning map above. A summary of a book chapter [@chesterman_game_2023] exploring these issues with recommendations for practitioners is included in Appendix.learningmap.
 
-Evidence of personal appropriation in video data was not be limited to testable knowledge, many of the behaviours explored in this chapter show both the appropriation and feeding back of varied understandings of game design patterns and design practices and skills. Given that this dimension is not explored in the thesis which has a greater focus on community and social aspects of use of GDPs, examples of personal appropriation are included here in one dimension only, that of technical implementation of coding structures via a code patching technique and debugging types of coding errors. This is chosen as an under-researched inclusive practice which merits further investigation (include in Chapter 2).
+<!-- One area in particular stand out: code patching technique and debugging types of coding errors. This is chosen as an under-researched inclusive practice which merits further investigation (include in Chapter 2). -->
+
+<!-- Evidence of personal appropriation in video data was not be limited  to those suited to a curricular purpose outline in the table,  many of the behaviours explored in this chapter show both the appropriation and feeding back of varied understandings of game design patterns and design practices and skills.  -->
+
+<!-- MOVE?
+A summary of a book chapter [@chesterman_game_2023] exploring these issues with recommendations for practitioners is included in Appendix.learningmap. -->
+
+
+Given that this thesis has a focus on community and social aspects of use of GDPs, evidence of only one dimension of personal appropriation is included here in this section, that of technical implementation of coding structures. The implementation of GDPs can stimulate participants to adopt or to share technical processes in a variety of ways. Technical processes were sometimes introduced in a basic form through scaffolded activities, supporting documentation or evolved from informal interaction between peers. The following observations show the adaptation of introduced processes being modified by the community. Thus inline with Rogoff's understanding of personal appropriation as bi-directional in nature of the appropriation of personal knowledge, emphasising Vygotsky's foundational view of knowledge as being mutually constituted as participants feed their interpretation of knowledge back into the communities of which they are a part.
+
 
 <!-- NOTE - (Additional examples may be included in Appendix.learning) -->
 
-DROP?
-While the flexible / non-testing nature of the environment makes claims here difficult, a reflection by a parent interview data on a testing activity in P1 is relevant. S parent of J and T on completion of a jigsaw test, celebrated seeing that her family were able to recognise and order the code structures presented as validation of the experiential, non-instructional approach (see appendix.learningmap).
-
-MOVE DOWN?
-The repeated, solo, incremental changes by Toby, an example of which are illustrated in  V1 indicate a personal appropriation of design processes, and concepts of game challenge related to the implementation of game design patterns. In line with  CHAT theory, this can be interpreted as an operationalisation of previous actions which were previously explicitly taught or learnt [@leontiev_activity_2009] CHECK.  Similar demonstrations of fluidity of practice are shown in by most participants in varied areas: uploading assets (see V4) , adjusting game challenge via altering GDPs elements,
-
-
-
-MOVE? COMPRESS?
-In Papert's research, detailed study of young coders evolving code creations and accompanying interview data allowed a close study of the personal appropriation, including elements of understanding, application and sharing back this knowledge via created and shared digital projects. Much subsequent research on the use of coding to develop both concrete and more abstract computational thinking skills, has neglected this social and perspectives [find source], instead focusing on a personal dimension of learning as a curricular skill to be absorbed and tested. By way of contrast, this study is aligned with the development of the constructionist movement towards socio-cultural approaches to transcend individual personal conceptions of knowledge, exemplified by the issues associated with the UK computing curriculum. In this informal learning context, there was scant desire from participants to explore concepts aligned with computing curriculum, instead driven more by practical desire to make a game using the tools provided.
 
 
 
 ### The role of GDP used in emerging technical processes (900)
 
-The implementation of GDPs can stimulate participants to adopt or to share technical processes. Technical processes were sometimes introduced in a basic form through scaffolded activities, supporting documentation or evolved from informal interaction between peers. The following observations show the adaptation of introduced processes being modified by the community. Thus inline with Rogoff's understanding of personal appropriation as bi-directional in nature of the appropriation of personal knowledge, emphasising Vygotsky's foundational view of knowledge as being mutually constituted as participants feed their interpretation of knowledge back into the communities of which they are a part.
 
-Thus while use and propagation of new technical processes were often motivated by a drive to implement or complete a GDPs, the following observations bear in mind that the relationship between GDPs and emergent technical processes is complex and interdependent rather than assuming that GDPs directly facilitate emerging tool use.
-
-The following paragraphs address x,  and z
+Thus while use and propagation of new technical processes were often motivated by a drive to implement or complete a GDPs, the following observations bear in mind that the relationship between GDPs and emergent technical processes is complex and interdependent rather than assuming that GDPs directly facilitate emerging tool use. DEVELOP? CLARIFY?
 
 
 
-
-#### Section 1 - general technical proficiency
-
-
+**General technical proficiency**
 
 <!-- Taking a more focused view of the activity here would be implementing a game design pattern - e.g. adding keys and doors pattern in this case. On the level of action, creating a graphical asset of a key and adding this to the level design. The operation would be the exporting the graphical asset as a suitable file format from graphical design tool and uploading it to the code authoring tool. -->
-
-Vignette 5? details Madiha getting help in exporting graphical files to be imported into the game code project is example of GDPs taking a role in the development of technical processes. Here the parent needs to learn or at least to draw on peer knowledge to complete the implementation of her chosen pattern. Similarly later in V5?, Madiha is helped in the use of the cropping tool by a peer child Ed(c)
 
 
 **Increasing technical fluidity of general computer use and software tools**
 
-<!-- Some examples contain processes that are linked to the language and the concepts and player experience of GDPs, for example the use of GDP language of hazards and rewards (see extract). -->
+Examples of processes being adopted by participants through the implementation of GDPs including the fluidity of navigation between playing and coding window shown by all younger participants and many adults and the development of keyboard and mouse coordination to facilitate navigation within the code environment and external support resources to facilitate the code patching process.
 
-<!-- Other examples are more secondary where the emerging processes and adoption of language concern more to do with more general digital design,  which are needed due to the process of implementing game features - which are in this case structured via GDPs. -->
+
+Whilst pursuing the motivation of seeing their GDP-related change in the game many participants become fluid in certain aspects of general computer use and more specific technical processes involved with software use of game making tools. In line with  CHAT theory, this can be interpreted as an operationalisation of previous actions which were previously explicitly taught or learnt [@leontiev_activity_2009] (chECK). Increased fluidity were shown in by most participants, in particular in the areas of creating and uploading, and integrating graphical assets, adjusting game challenge via altering GDPs elements, and coding processes of debugging and code patching. The following paragraphs outline and reference examples from video data.
+
+In Vignette 5 (V5.a & V5), Madiha(p) accesses help from her daughter Nasrin(c) to first format and then exporting graphical files to be imported into the game code project. The implementation of her chosen GDPs drives  the development of these technical processes as she must learn or at least to draw on peer knowledge to complete it.
+The process of changing pen colours on the graphical tool is one which the child has been able to translate into a effortless process whereas the parent is still consciously building her competency. Nasrin has operationalised the process and it becomes part of the toolset of practices that she can draw on. Similarly, in V5.d Madiha is helped in the use of the cropping tool, a process to redundant space at the edges of design sprite characters, by a peer child Ed(c) after playtesting Madiha's game.
+
+**GDPs encouraging sharing of technical practices:** References to such emerging technical practices were present in many exchanges during playtesting of implementations of GDPs.
+
+
+<!-- Madiha also benefits, the expertise of her child to undertake that process is added to her distributed toolset. However, she is also keen to develop her own competency as indicated by her asking child to explain the process. -->
+
+
+<!--
+NOTE - IS THERE ARE GOOD PLACE FOR THIS IN APPENDIX?
+Some examples contain processes that are linked to the language and the concepts and player experience of GDPs, for example the use of GDP language of hazards and rewards (see extract).
+
+Other examples are more secondary where the emerging processes and adoption of language concern more to do with more general digital design,  which are needed due to the process of implementing game features - which are in this case structured via GDPs. -->
 <!-- by making a distinction between primary and secondary involvement of GDPS in technical processes. -->
 <!-- Thus while the concepts of GDPs are some times useful to explain a technical concepts directly, especially where direct / immediate feedback involving concrete example of experience are relevant, at times the process in more indirect. -->
 
-
-Whilst pursuing the motivation of seeing their GDP-related change in the game many participants become fluid in certain aspects of general computer use and more specific technical processes involved with software use of game making tools.  
-
-Examples of processes being adopted by participants through the implementation of GDPs including the fluidity of navigation between playing and coding window shown by all younger participants and many adults and the development of keyboard and mouse coordination to facilitate navigation within the code environment and external support resources to facilitate the code patching process.
-
-**GDPs encouraging sharing of technical practices**
-
-In Vignette 5.a, we can see that the process of changing pen colours on the graphical tool is one which the child has been able to translate into a effortless process whereas the parent is still consciously building her competency. Nasrin has operationalised the process and it becomes part of the toolset of practices that she can draw on [CITE]. Madiha also benefits, the expertise of her child to undertake that process is added to her distributed toolset. However, she is also keen to develop her own competency as indicated by her asking child to explain the process.
-
-References to such emerging technical practices were present in many exchanges during informal playtesting and pair interactions. In the following example a reference to a GDP is used to explain the need for the technical process.  
-
-In Vignette 5.e, after giving feedback on the jump speed Madiha's game Ed sharing a process to redundant space at the edges of design sprite characters.
 
 <!--
 MOVE TO TECHNICAL IF NOT ALREADY HTERE
@@ -354,33 +348,25 @@ While Ed has only just been introduced to the ability to "cramp". He is happy an
 
 <!-- NOTE - In vignette 4.a.5 -->
 
-    "Ed: for people with background like yours You can use the cramping tool."
-
-Ed leads Madiha to his workstation and involves his father Mark in the process. Mark uses an example of a GDP in his explanation of why to undertake that process, to not "set things off when you are close to them".
-
-Thus rather than GDPs helping the graphical cropping process, it provokes Ed to notice and suggest it to Madiha, and Mark to evoke it as a reason to undertake cropping.  
-
-#### Section 2 - patching and bug types
 
 **Code Patching as a guided technical process and the use of GDPs to nurture tactical responses to coding errors**
 
-A further example is the the process in _code patching_ (see glossary for terms in italics) in Appendix 1.
+This section is supported by Appendix.debugging
 
-Code patching, the process of copying and pasting fixes into on-going projects, is outlined in Appendix.codepatching. The process of code patching is similar in that the documentation is structured around GDPS, and thus similar aspects of an appropriate organising unit apply.
+Conditions which facilitate the development of fluidity is well illustrated in the repeated, solo, incremental changes by Toby, in V1. The  indicate a personal appropriation of design processes, and concepts of game challenge related to the implementation of game design patterns.
 
-Code patching is a processes which suits being organised around GDPs aligns with the UMC process.
+A further example is show in Toby's careful  in V1.a.
+the the process in _code patching_
+where the process of copying and pasting fixes into on-going projects,  
 
-The patches, and patching process became an important process in documentation. While code was provided, in practice mistakes were still made and additional customisations were made.
+This patching process became an important process in documentation. While code was provided, in practice mistakes were still made and additional customisations were made.
 
-**Solving / Debuggging code problems that responses are helped by the high level of context present in the use of GDP as a structural design framework.**
+Aspects of the design, use of a starting template and supporting resources based on code snippets and thus code patching process increased appear to encourage a kind of bug I refer to as glitches . See V1a for an example of a glitch bug which provoked further investigation and hand on tinkering. A diversity of helping strategies evolved, my own and those of others, in response to errors.
 
-In critique of online tutorials researchers note few provide common errors [@kim_pedagogical_2017]. While it seems reasonable not to include all possible errors, the challenge of supporting participants to build skills and effective repertoires involving debugging is widely recognised [SUPPORT]. My observations suggest that the close coupling of code implementation and target behaviour aids participants in debugging and also be profitably can be drawn on by facilitators.
+From this and similar observations I propose that the close coupling of code implementation and target behaviour (in this case structured around GDPs) aids scaffolds the debugging process and can be profitably can be drawn on by facilitators.
 
-In analysis of journal notes and recorded screens I began to identify different kinds of coding problems that blocked participants from progressing and build proficiency and flexibility in addressing them. Reflections on participant experiences of kinds of errors are explored in Appendix.tech.2. In the appendix I reflect on syntax errors which stopped the game from working entirely, bugs where code changes had no effect on the game and glitches which don't crash the game instead creating an unintended effect. Glitches merit a summary here as a particularly interesting site of guided participation. In my reflective notes I propose that glitches are more motivating to correct than other errors.
+STILL INTEGRATE FROM Appendix.debugging 
 
-Aspects of the design, use of a starting template and supporting resources based on code snippets and thus code patching process increased appear to encourage glitch bugs. See Vignette 1 for an example of a glitch bug which provoked further investigation and hand on tinkering. A diversity of helping strategies evolved, my own and those of others, in response to errors. For my part, these altered when I judged when participants to be receptive to different forms of input. Glitch errors were often embraced as curiosities and as a learning opportunity to understand the related code and associated abstract concepts using a concrete example afforded by the mechanics of the game design pattern. Mirroring the proposition of half baked games theory that a incomplete / templated game are motivates initial participation, my observation support a position that glitch bugs, which move game into a broken state also provide motivation. Additionally, as the bug relates to a targeted GDP which is closely coupled with a suggested code solution and tutorial, this process incorporates the benefits of a just-in-time approach to supporting documentation
-
-This area opens some interesting lines of questioning which are beyond the full remit of this research but are included in Appendix.tech.2 as promising areas for future work. When addressing issues of motivation and efficacy a different research methodology would be needed.
 
 <!-- - Question - do more useful / less de-motivating errors result from remixing and game patching?
 - Question - what impact does the process of being driven by GDPs have on how users deal with errors?
